--- a/index.html
+++ b/index.html
@@ -8,4 +8,15 @@ meta-title: Home
 meta-description: Home page.
 ---
 
-Home Page
+<h1>Overview</h1>
+<p>This guidebook establishes the rules and guidelines specific to the Channel Master brand, related products and services. The consistent use and display of logos and supporting elements is critical to building strong brand recognition and awareness. Adherence to strict branding guidelines helps protect our trademarks and logos from competitive infringement.</p>
+<p>The content of this document should be interpreted as a framework within which various communications efforts should be developed. Any deviation from the specifications outlined in the guidebook must be approved by Channel Master.</p>
+
+
+{% include patterns/logos.html %}
+{% include patterns/cm-icon.html %}
+
+{% include patterns/brand-colors.html %}
+{% include patterns/brand-fonts.html %}
+
+<div style="height: 1200px;">&nbsp;</div>
