Add product logos and production logos

--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@ meta-description: Home page.
 
 {% include patterns/brand-colors.html %}
 {% include patterns/brand-fonts.html %}
+{% include patterns/logos-product.html %}
+{% include patterns/logos-other.html %}
 
 <div style="height: 1200px;">&nbsp;</div>
