--- a/html5-ads/ad-2018-08-13-2.html
+++ b/html5-ads/ad-2018-08-13-2.html
@@ -26,11 +26,12 @@ NOTE: Add GA Tracking to Link, add link.
 			<span class="title"><em>Your TV Antenna</em> <strong><i>Needs</i> <span>A DVR</span></strong></span>
 			<span class="stream-image">&nbsp;</span>
 		</span>
+        <span class="button">Shop Now</span>
     	<span class="bottom">
 			<span class="logo">{% include svg/stream-plus-logo.svg %}</span>
 			<span class="features"><span>Subscription Free DVR with On-Screen Channel Guide</span></span>
 			<span class="guide-image">&nbsp;</span>
-		</div>
+		</span>
     </a>
 </body>
 </html>
