renaming and resizing to pass google validation

--- a/html5-ads/cmad20180815.html
+++ b/html5-ads/cmad20180815.html
@@ -9,19 +9,19 @@ NOTE: Add GA Tracking to Link, add link.
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="displayheight" content="31, 60, 90, 125, 250, 400, 600" />
+    <meta name="ad.size" content="width=300,height=250">
+    <meta name="ad.size" content="width=728,height=90">
+    <meta name="ad.size" content="width=160,height=600">
 
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 <![endif]-->
-    
-    <link rel="stylesheet" type="text/css" href="ad-css-2018-08-13-2.css">     
-    <script type="text/javascript" src="ad-js.js"></script>
+    <link rel="stylesheet" type="text/css" href="cmad20180815.css">
 </head>
 
 <body onload="setTimeout(window.scrollTo(0,1),1);">
-    <a href="#" target="_top" id="cmAd-DVR" class="cm-ad">
+    <a href="https://www.channelmaster.com/OTA_DVR_s/336.htm" target="_top" id="cmAd-DVR" class="cm-ad">
     	<span class="top">
 			<span class="title"><em>Your TV Antenna</em> <strong><i>Needs</i> <span>A DVR</span></strong></span>
 			<span class="stream-image">&nbsp;</span>
