--- a/html5-ads/ad-preview.html
+++ b/html5-ads/ad-preview.html
@@ -1,5 +1,5 @@
 ---
-ad-path: ad-2018-08-13-2.html
+ad-path: cmad20180815.html
 ---
 <!DOCTYPE html>
 <!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
