--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@ meta-description: Home page.
 {% include patterns/brand-colors.html %}
 {% include patterns/brand-fonts.html %}
 {% include patterns/logos-product.html %}
-{% include patterns/logos-other.html %}
+{% comment %}{% include patterns/logos-other.html %}{% endcomment %}
 
 <div style="height: 1200px;">&nbsp;</div>
