--- a/web.html
+++ b/web.html
@@ -9,7 +9,7 @@ meta-description: Home page.
 ---
 
 <h1>Web & Emails</h1>
-<p>The ecommerce store for Channel Master is the biggest touchpoint we have with customers until they purchase & receive our products. The website should __________.</p>
+<p>The ecommerce store for Channel Master is the biggest touchpoint we have with customers until they purchase & receive our products.</p>
 
 {% include patterns/base-fonts.html %}
 
